Improve configuration of native image compilation
- Solve msgpack issue with `--initialize-at-run-time`.
- Use quick build mode for non-release builds:
  40% faster compilation, 20% smaller executable.
- Remove options that were commented out.